name:                empty-gloss-game-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/empty-gloss-game-project#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable empty-gloss-game-project
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       gloss == 1.10.2.5,
                       gloss-game == 0.3.3.0,
                       gloss-juicy == 0.2.2
